--- a/frontend/src/Components/SelectInput/SelectInput.scss
+++ b/frontend/src/Components/SelectInput/SelectInput.scss
@@ -147,14 +147,14 @@
   }
 
 .select-input__wrapper {
-	height: 32px;
+	height: 40px;
 	position: relative;
 	display: inline-flex;
 	flex-direction: column;
 	align-items: start;
 	gap: 6px;
 	position: relative;
-	width: 100%;
+	width: fit-content;
 }
 
 .select_invalid{
