--- a/frontend/src/Components/SelectInput/SelectInput.scss
+++ b/frontend/src/Components/SelectInput/SelectInput.scss
@@ -1,5 +1,6 @@
 .selectInput{
 	font-family: 'Inter';
+	color: black;
 	&__control {
 		cursor: pointer !important;
 		border-radius: 10px !important;
