--- a/frontend/src/app/App.scss
+++ b/frontend/src/app/App.scss
@@ -5,6 +5,7 @@
 	margin: 0;
 	padding: 0;
 	color: var(--tg-theme-text-color);
+	background-color: var(--tg-theme-secondary-bg-color);
 }
 #root{
 	position: relative;
