--- a/frontend/src/app/App.scss
+++ b/frontend/src/app/App.scss
@@ -4,6 +4,8 @@
 	box-sizing: border-box;
 	margin: 0;
 	padding: 0;
+}
+.app{
 	color: var(--tg-theme-text-color);
 	background-color: var(--tg-theme-secondary-bg-color);
 }
